# htsg

./: README.md  setup.cfg
article/: index.html
css/: style.css
example/: README.md  config.toml
example/templates/: article.html  article_list.html  breadcrumbs.html  header.html  top.html
example/templates/contents/: 001.html  002.html
htsg/: __init__.py  __main__.py  htsg.py
