[metadata]
name = htsg
version = attr: htsg.__version__
author = Laddge
author_email = dev.laddge@gmail.com
description = Another SSG
url = https://github.com/laddge/htsg
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires =
  toml
  jinja2
  watchdog

[options.entry_points]
console_scripts =
  htsg = htsg.__main__:main
